--- a/chatwork.cabal
+++ b/chatwork.cabal
@@ -1,8 +1,10 @@
--- This file has been generated from package.yaml by hpack version 0.28.2.
+cabal-version: 1.12
+
+-- This file has been generated from package.yaml by hpack version 0.31.1.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e09f74b079b2413e347ed6d541f3537e9f7962b9b9592872907c8fa134b2a261
+-- hash: c54788dfb521a7504f2d8683016d98eba7c8c78115d43e063ca54d162c66638a
 
 name:           chatwork
 version:        0.1.3.5
@@ -17,7 +19,6 @@ copyright:      2017-2018 MATSUBARA Nobutada
 license:        MIT
 license-file:   LICENSE
 build-type:     Simple
-cabal-version:  >= 1.10
 
 source-repository head
   type: git
@@ -28,18 +29,16 @@ library
       src
   ghc-options: -Wall
   build-depends:
-      aeson >=1.0.2.1 && <1.5
-    , aeson-casing >=0.1.0.5 && <0.2
+      aeson >=1.4
+    , aeson-casing >=0.1
     , base >=4.7 && <5
-    , bytestring >=0.10.8.1 && <0.11
-    , connection >=0.2.7 && <0.3
-    , data-default-class >=0.1.2.0 && <0.2
-    , http-api-data >=0.3.5 && <0.3.9
-    , http-client >=0.5.5.0 && <0.6
-    , http-client-tls >=0.3.3.1 && <0.4
-    , http-types >=0.9.1 && <0.13
-    , req >=1.0.0 && <1.3.0
-    , text >=1.2.2.1 && <1.3
+    , bytestring >=0.10
+    , data-default-class >=0.1
+    , http-api-data >=0.4
+    , http-client >=0.5
+    , http-types >=0.12
+    , req >=1.2
+    , text >=1.2
   exposed-modules:
       ChatWork
       ChatWork.Client
@@ -62,29 +61,6 @@ library
       Paths_chatwork
   default-language: Haskell2010
 
-executable sample-exe
-  main-is: Main.hs
-  hs-source-dirs:
-      sample
-  ghc-options: -Wall
-  build-depends:
-      aeson >=1.0.2.1 && <1.5
-    , aeson-casing >=0.1.0.5 && <0.2
-    , base >=4.7 && <5
-    , bytestring >=0.10.8.1 && <0.11
-    , chatwork
-    , connection >=0.2.7 && <0.3
-    , data-default-class >=0.1.2.0 && <0.2
-    , http-api-data >=0.3.5 && <0.3.9
-    , http-client >=0.5.5.0 && <0.6
-    , http-client-tls >=0.3.3.1 && <0.4
-    , http-types >=0.9.1 && <0.13
-    , req >=1.0.0 && <1.3.0
-    , text >=1.2.2.1 && <1.3
-  other-modules:
-      Paths_chatwork
-  default-language: Haskell2010
-
 test-suite spec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
@@ -93,20 +69,18 @@ test-suite spec
       src
   ghc-options: -Wall
   build-depends:
-      aeson >=1.0.2.1 && <1.5
-    , aeson-casing >=0.1.0.5 && <0.2
+      aeson >=1.4
+    , aeson-casing >=0.1
     , base >=4.7 && <5
-    , bytestring >=0.10.8.1 && <0.11
-    , connection >=0.2.7 && <0.3
-    , data-default-class >=0.1.2.0 && <0.2
+    , bytestring >=0.10
+    , data-default-class >=0.1
     , hspec >=2.4.1 && <2.6
-    , http-api-data >=0.3.5 && <0.3.9
-    , http-client >=0.5.5.0 && <0.6
-    , http-client-tls >=0.3.3.1 && <0.4
-    , http-types >=0.9.1 && <0.13
-    , req >=1.0.0 && <1.3.0
+    , http-api-data >=0.4
+    , http-client >=0.5
+    , http-types >=0.12
+    , req >=1.2
     , servant-server >=0.9.1.1 && <0.15
-    , text >=1.2.2.1 && <1.3
+    , text >=1.2
     , warp >=3.2.11 && <3.3
   other-modules:
       ChatWork.Endpoints.ContactsSpec
