--- a/package.yaml
+++ b/package.yaml
@@ -13,17 +13,15 @@ ghc-options: -Wall
 
 dependencies:
   - base >=4.7 && <5
-  - aeson >=1.0.2.1 && <1.5
-  - aeson-casing >=0.1.0.5 && <0.2
-  - bytestring >=0.10.8.1 && <0.11
-  - connection >=0.2.7 && <0.3
-  - data-default-class >=0.1.2.0 && <0.2
-  - http-api-data >=0.3.5 && <0.3.9
-  - http-client >=0.5.5.0 && <0.6
-  - http-client-tls >=0.3.3.1 && <0.4
-  - http-types >=0.9.1 && <0.13
-  - req >=1.0.0 && <1.3.0
-  - text >=1.2.2.1 && <1.3
+  - aeson >=1.4
+  - aeson-casing >=0.1
+  - bytestring >=0.10
+  - data-default-class >=0.1
+  - http-api-data >=0.4
+  - http-client >=0.5
+  - http-types >=0.12
+  - req >=1.2
+  - text >=1.2
 
 library:
   source-dirs: src
